Documentation edits made through Mintlify web editor

--- a/missions/story/franklinandlamar.mdx
+++ b/missions/story/franklinandlamar.mdx
@@ -6,444 +6,444 @@ icon: "cars"
 
 ### 📝 Therapy Session
 
-> The scene fades in with **Michael** having a discussion with **Dr. Friedlander**, at his office.
+> The scene fades in with <span className="michael">Michael</span> having a discussion with <span className="drfriedlander">Dr. Frienlander</span>, at his office.
 
-**Dr. Friedlander:** Your son, James. He's a good kid?
+<span className="drfriedlander">Dr. Frienlander:</span> Your son, James. He's a good kid?
 
-**Michael:** He's a good kid? A good kid? Why? Does he help the fuckin' poor? No. He sits on his ass all day, smoking dope and jerkin' off while he plays that fucking game. If that's our standard for goodness, then no wonder this country's screwed.
+<span className="michael">Michael:</span> He's a good kid? A good kid? Why? Does he help the fuckin' poor? No. He sits on his ass all day, smoking dope and jerkin' off while he plays that fucking game. If that's our standard for goodness, then no wonder this country's screwed.
 
-**Dr. Friedlander:** And what about you?
+<span className="drfriedlander">Dr. Frienlander:</span> And what about you?
 
-**Michael:** What about me?
+<span className="michael">Michael:</span> What about me?
 
-> **Dr. Friedlander** motions his hands, wanting **Michael** to talk.
+> <span className="drfriedlander">Dr. Frienlander</span> motions his hands, wanting <span className="michael">Michael</span> to talk.
 
-**Michael:** Hey...
+<span className="michael">Michael:</span> Hey...
 
-> **Michael** sits up straight.
+> <span className="michael">Michael</span> sits up straight.
 
-**Michael:** I didn't have the advantages that kid has. By the time I was his age, I'd already been in prison twice. I robbed banks, I ran whores, I smuggled dope.
+<span className="michael">Michael:</span> I didn't have the advantages that kid has. By the time I was his age, I'd already been in prison twice. I robbed banks, I ran whores, I smuggled dope.
 
-**Dr. Friedlander:** And you consider them achievements?
+<span className="drfriedlander">Dr. Frienlander:</span> And you consider them achievements?
 
-**Michael:** These were the opportunities I had. At least I took 'em.
+<span className="michael">Michael:</span> These were the opportunities I had. At least I took 'em.
 
-**Dr. Friedlander:** And where did these opportunities get you, Michael?
+<span className="drfriedlander">Dr. Frienlander:</span> And where did these opportunities get you, Michael?
 
-**Michael:** They got me right...
+<span className="michael">Michael:</span> They got me right...
 
-> **Michael** stands up and walks around the office, expressing his anger.
+> <span className="michael">Michael</span> stands up and walks around the office, expressing his anger.
 
-**Michael:** ...fuckin' here\! The end of the road\! With a big house and a useless kid, and I'm stuck talking to you because no one else gives a shit\! Oh, I'm living the dream, baby\! And that dream is fucked\! It is... fucking fucked\!
+<span className="michael">Michael:</span> ...fuckin' here\! The end of the road\! With a big house and a useless kid, and I'm stuck talking to you because no one else gives a shit\! Oh, I'm living the dream, baby\! And that dream is fucked\! It is... fucking fucked\!
 
-**Dr. Friedlander:** Let it all out.
+<span className="drfriedlander">Dr. Frienlander:</span> Let it all out.
 
-> **Michael** sits back down.
+> <span className="michael">Michael</span> sits back down.
 
-**Michael:** I think I just did.
+<span className="michael">Michael:</span> I think I just did.
 
-> **Dr. Friedlander** glances at his watch, noticing the time.
+> <span className="drfriedlander">Dr. Frienlander</span> glances at his watch, noticing the time.
 
-**Dr. Friedlander:** Oh, well I, think that's all we have time for. Same time next week?
+<span className="drfriedlander">Dr. Frienlander:</span> Oh, well I, think that's all we have time for. Same time next week?
 
-**Michael:** I guess...
+<span className="michael">Michael:</span> I guess...
 
-> **Michael** stands back up and walks towards the door to leave **Friedlander's** office.
+> <span className="michael">Michael</span> stands back up and walks towards the door to leave <span className="drfriedlander">Dr. Frienlander's</span> office.
 
-**Michael:** I gotta tell you, I ain't too sure this shit is workin' for me.
+<span className="michael">Michael:</span> I gotta tell you, I ain't too sure this shit is workin' for me.
 
-**Dr. Friedlander:** Hm.
+<span className="drfriedlander">Dr. Frienlander:</span> Hm.
 
-> **Dr. Friedlander** stands up from his chair.
+> <span className="drfriedlander">Dr. Frienlander</span> stands up from his chair.
 
-**Dr. Friedlander:** Well, a sense of overriding futility is a vital part of the process. Embrace it.
+<span className="drfriedlander">Dr. Frienlander:</span> Well, a sense of overriding futility is a vital part of the process. Embrace it.
 
-**Michael:** Whatever you say, Doc.
+<span className="michael">Michael:</span> Whatever you say, Doc.
 
-> **Michael** walks out and closes the door behind him. This marks the transition to the game's opening sequence, which consists of numerous establishing shots of Del Perro and the surrounding area. These include a bird's-eye view of the Great Ocean Highway, the Los Santos skyline, the near-entirety of both Vespucci and Del Perro Beach, and a Jetmax speeding past the pier. In addition, we get a glimpse at several interactions between the inhabitants of Los Santos: a cyclist narrowly riding past two beachgoers; bodybuilders lifting weights and exercising; a retriever sprinting past a sunbathing woman; and finally, two joggers passing by **Michael**, who is merely strolling past the beach houses of Del Perro. He notices a police officer failing to capture the attention of a vagrant stumbling along the walkway. After watching the man with a look of empathy, **Michael** sits down on a bench.
+> <span className="michael">Michael</span> walks out and closes the door behind him. This marks the transition to the game's opening sequence, which consists of numerous establishing shots of Del Perro and the surrounding area. These include a bird's-eye view of the Great Ocean Highway, the Los Santos skyline, the near-entirety of both Vespucci and Del Perro Beach, and a Jetmax speeding past the pier. In addition, we get a glimpse at several interactions between the inhabitants of Los Santos: a cyclist narrowly riding past two beachgoers; bodybuilders lifting weights and exercising; a retriever sprinting past a sunbathing woman; and finally, two joggers passing by <span className="michael">Michael</span>, who is merely strolling past the beach houses of Del Perro. He notices a police officer failing to capture the attention of a vagrant stumbling along the walkway. After watching the man with a look of empathy, <span className="michael">Michael</span> sits down on a bench.
 
-**Michael:** [quietly] I know just how you feel.
+<span className="michael">Michael:</span> [quietly] I know just how you feel.
 
 ### ⭐ Franklin and Lamar
 
-> **Franklin** and **Lamar** walk by.
+> <span className="franklin">Franklin</span> and <span className="lamar">Lamar</span> walk by.
 
-**Lamar:** Man, shit gotta be around here somewhere.
+<span className="lamar">Lamar:</span> Man, shit gotta be around here somewhere.
 
-**Franklin:** Unless they buried it under the sand, fool. Another brilliant Lamar Davis production.
+<span className="franklin">Franklin:</span> Unless they buried it under the sand, fool. Another brilliant Lamar Davis production.
 
-**Lamar:** Man, fuck you. [to Michael] Hey, excuse me, homie, can you tell me where Bertolt Beach House is?
+<span className="lamar">Lamar:</span> Man, fuck you. [to Michael] Hey, excuse me, homie, can you tell me where Bertolt Beach House is?
 
-**Michael:** No, homie, I cannot.
+<span className="michael">Michael:</span> No, homie, I cannot.
 
-**Franklin:** [to Lamar] Man, would you come on? Fuck\!
+<span className="franklin">Franklin:</span> [to Lamar] Man, would you come on? Fuck\!
 
-> **Michael** quickly rises up as the two begin to walk off.
+> <span className="michael">Michael</span> quickly rises up as the two begin to walk off.
 
-**Michael:** Actually, yeah... it's that house right there, with the yellow stairs.
+<span className="michael">Michael:</span> Actually, yeah... it's that house right there, with the yellow stairs.
 
-**Lamar:** Yeah, good looking out, homie, appreciate it.
+<span className="lamar">Lamar:</span> Yeah, good looking out, homie, appreciate it.
 
-> **Franklin** shoves **Lamar** away.
+> <span className="franklin">Franklin</span> shoves <span className="lamar">Lamar</span> away.
 
-**Franklin:** Man, get your stupid ass on. Damn\! Why don't you ask him if he knows the fucking owner? Or better yet, do some sky writing that reads there's a couple of ni\*\*as here about to boost some cars in case somebody didn't realize.
+<span className="franklin">Franklin:</span> Man, get your stupid ass on. Damn\! Why don't you ask him if he knows the fucking owner? Or better yet, do some sky writing that reads there's a couple of ni\*\*as here about to boost some cars in case somebody didn't realize.
 
-**Lamar:** See, what you don't realize, is that we ain't boosting. This shit is legit business.
+<span className="lamar">Lamar:</span> See, what you don't realize, is that we ain't boosting. This shit is legit business.
 
-**Franklin:** Legit? Oh yeah, I forgot, huh? 401Ks, tax returns and all. Yeah, right.
+<span className="franklin">Franklin:</span> Legit? Oh yeah, I forgot, huh? 401Ks, tax returns and all. Yeah, right.
 
-**Lamar:** You the one all pumped up on doing this lick, ni\*\*a. I'm getting my money in the hood, I'm straight, fool. I'm cool.
+<span className="lamar">Lamar:</span> You the one all pumped up on doing this lick, ni\*\*a. I'm getting my money in the hood, I'm straight, fool. I'm cool.
 
-**Franklin:** You cool? Cool what? Slinging dope and throwing up gang signs? Yeah, right.
+<span className="franklin">Franklin:</span> You cool? Cool what? Slinging dope and throwing up gang signs? Yeah, right.
 
-**Lamar:** Whatever, homie.
+<span className="lamar">Lamar:</span> Whatever, homie.
 
 ### 🚗 Stealing the Cars
 
-> As the opening credits end, **Franklin** and **Lamar** arrive at the beach front house. **Franklin** speedily opens the gate.
+> As the opening credits end, <span className="franklin">Franklin</span> and <span className="lamar">Lamar</span> arrive at the beach front house. <span className="franklin">Franklin</span> speedily opens the gate.
 
-**Lamar:** Yeah, homie, this the spidnot right here. Your boy **Simeon** wasn't bullshitting.
+<span className="lamar">Lamar:</span> Yeah, homie, this the spidnot right here. Your boy <span className="simeon">Simeon</span> wasn't bullshitting.
 
-**Franklin:** Man, get your ass in there.
+<span className="franklin">Franklin:</span> Man, get your ass in there.
 
-**Lamar:** Bring your ass, fool, you're always trying to boss somebody.
+<span className="lamar">Lamar:</span> Bring your ass, fool, you're always trying to boss somebody.
 
 > The two hastily sneak around the house.
 
-**Lamar:** [whispering] Come on. Come on. Shit, come on.
+<span className="lamar">Lamar:</span> [whispering] Come on. Come on. Shit, come on.
 
 > They get to the driveway, occupied by a white 9F Cabrio and a red Rapid GT convertible.
 
-**Lamar:** Damn. This ni\*\*a must got the baby dick.
+<span className="lamar">Lamar:</span> Damn. This ni\*\*a must got the baby dick.
 
-**Franklin:** Yeah, and all this shit paid for with bad credit.
+<span className="franklin">Franklin:</span> Yeah, and all this shit paid for with bad credit.
 
-**Lamar:** Whoohoo. Come to Daddy. Which one you want, ni\*\*a?
+<span className="lamar">Lamar:</span> Whoohoo. Come to Daddy. Which one you want, ni\*\*a?
 
 <Accordion title="Alternative Dialogue - Franklin doesn't decide">
-  **Lamar:**  It ain't this complicated.
-  **Alternative:** You goin' call this or what?
-  **Alternative:** Come on. Which one of these motherfuckers you want?
-  **Alternative:** I'm about to take away your privileges.
-  **Alternative:** Come on, homie.
-  **Alternative:** Makin' decisions - it's business 101.
+  <span className="lamar">Lamar:</span>  It ain't this complicated.  
+  <span className="alternative">Alternative:</span> You goin' call this or what?  
+  <span className="alternative">Alternative:</span> Come on. Which one of these  motherfuckers you want?  
+  <span className="alternative">Alternative:</span> I'm about to take away your privileges.  
+  <span className="alternative">Alternative:</span> Come on, homie.  
+  <span className="alternative">Alternative:</span> Makin' decisions - it's business 101.  
 </Accordion>
 
-> The duo each enter a car, having a unique exchange depending on the car Franklin gets into. **Franklin** will retract the roof on either vehicle.
+> The duo each enter a car, having a unique exchange depending on the car Franklin gets into. <span className="franklin">Franklin</span> will retract the roof on either vehicle.
 
-> If **Franklin** enters the 9F Cabrio:
+> If <span className="franklin">Franklin</span> enters the 9F Cabrio:
 
-**Lamar:** You always was an old choosy motherfucker.
+<span className="lamar">Lamar:</span> You always was an old choosy motherfucker.
 
-> **Franklin** opens up the top
+> <span className="franklin">Franklin</span> opens up the top
 
-**Lamar:** Aw, you ballin' hard with the drop top, huh?
+<span className="lamar">Lamar:</span> Aw, you ballin' hard with the drop top, huh?
 
-**Franklin:** I might just be.
+<span className="franklin">Franklin:</span> I might just be.
 
-**Lamar:** Whatever, ni\*\*a, it ain't gonna make you go no faster. Hit me on the speakerphone, I'm movin'\!
+<span className="lamar">Lamar:</span> Whatever, ni\*\*a, it ain't gonna make you go no faster. Hit me on the speakerphone, I'm movin'\!
 
-**Franklin:** Oh, it's like that, ni\*\*a?
+<span className="franklin">Franklin:</span> Oh, it's like that, ni\*\*a?
 
 ---
 
-> If **Franklin** enters the Rapid GT:
+> If <span className="franklin">Franklin</span> enters the Rapid GT:
 
-**Lamar:** Like that? Bobby big dick on the ni\*\*a, huh?
+<span className="lamar">Lamar:</span> Like that? Bobby big dick on the ni\*\*a, huh?
 
-**Franklin:** Shit, for real, homie\! [retracting the roof] Damn, this motherfucker got a robo-roof and everything, ni\*\*a.
+<span className="franklin">Franklin:</span> Shit, for real, homie\! [retracting the roof] Damn, this motherfucker got a robo-roof and everything, ni\*\*a.
 
-**Lamar:** He shoulda paid the nizote\! [laughs]
+<span className="lamar">Lamar:</span> He shoulda paid the nizote\! [laughs]
 
-**Franklin:** Man, you got to grind to keep that shit. Now it's back on us.
+<span className="franklin">Franklin:</span> Man, you got to grind to keep that shit. Now it's back on us.
 
-**Lamar:** Hell yeah, I wanna see what it do. Hey, hit me on the speakerphone, lo.
+<span className="lamar">Lamar:</span> Hell yeah, I wanna see what it do. Hey, hit me on the speakerphone, lo.
 
-### 🛞 Street Racing Through the City
+### 🏁 Street Racing Through the City
 
-> **Lamar** speeds off.
+> <span className="lamar">Lamar:</span> speeds off.
 
-> **Franklin** quickly follows, accompanying **Lamar** in a high-speed chase. The two weave through traffic on the Great Ocean Highway before making a sharp right turn, heading uphill through Del Perro. Franklin calls Lamar, talking to him on speaker.
+> <span className="franklin">Franklin</span> quickly follows, accompanying <span className="lamar">Lamar:</span> in a high-speed chase. The two weave through traffic on the Great Ocean Highway before making a sharp right turn, heading uphill through Del Perro. Franklin calls Lamar, talking to him on speaker.
 
-**Lamar:** Right up here, homie. I'm ‘bout to go nice and slow for yo' bitch-ass.
+<span className="lamar">Lamar:</span> Right up here, homie. I'm ‘bout to go nice and slow for yo' bitch-ass.
 
-> If at any point **Franklin** gets ahead of Lamar in the race.
+> If at any point <span className="franklin">Franklin</span> gets ahead of Lamar in the race.
 
-**Lamar:** How the fuck you get in front of me?
-**Alternative:** How the fuck did you get up front?
-**Alternative:** That you in front, you fat motherfucker?
+<span className="lamar">Lamar:</span> How the fuck you get in front of me?
+<span className="alternative">Alternative:</span> How the fuck did you get up front?
+<span className="alternative">Alternative:</span> That you in front, you fat motherfucker?
 
-**Franklin:** Your slow ass should be askin' why I didn't get here sooner.
-**Alternative:** I been faster than your lanky ass since kindergarden.
-**Alternative:** Who else, you lanky bitch?
+<span className="franklin">Franklin:</span> Your slow ass should be askin' why I didn't get here sooner.
+<span className="alternative">Alternative:</span> I been faster than your lanky ass since kindergarden.
+<span className="alternative">Alternative:</span> Who else, you lanky bitch?
 
-**Franklin:** Eh, remember, we got to be careful with these rides, homie. ‘Cause Simeon ain't about to dock my pay again...
+<span className="franklin">Franklin:</span> Eh, remember, we got to be careful with these rides, homie. ‘Cause Simeon ain't about to dock my pay again...
 
-**Lamar:** Homie, man, if you need some bread, I could hook you up with JB's tow truck. It ain't got glamor but there's some money to be made.
+<span className="lamar">Lamar:</span> Homie, man, if you need some bread, I could hook you up with JB's tow truck. It ain't got glamor but there's some money to be made.
 
-**Franklin:** So him and Tonya could smoke crack in peace? Homie, I'm good.
+<span className="franklin">Franklin:</span> So him and Tonya could smoke crack in peace? Homie, I'm good.
 
-**Lamar:** Come on, Frank.
+<span className="lamar">Lamar:</span> Come on, Frank.
 
-**Franklin:** If you wanna chuck them thangs?
+<span className="franklin">Franklin:</span> If you wanna chuck them thangs?
 
-**Lamar:** Damn, dog, how much we gettin' for these repos? I'ma be one reluctant motherfucker givin' this up.
+<span className="lamar">Lamar:</span> Damn, dog, how much we gettin' for these repos? I'ma be one reluctant motherfucker givin' this up.
 
-**Franklin:** Man, there's enough bad credit going around, homie. It's like there's an endless supply in this fucked up ass country.
+<span className="franklin">Franklin:</span> Man, there's enough bad credit going around, homie. It's like there's an endless supply in this fucked up ass country.
 
-**Lamar:** This meant to be your shit.
+<span className="lamar">Lamar:</span> This meant to be your shit.
 
-**Franklin:** Get out the road\!
+<span className="franklin">Franklin:</span> Get out the road\!
 
-**Lamar:** I'm thinking left.
+<span className="lamar">Lamar:</span> I'm thinking left.
 
-**Franklin:** Fine.
+<span className="franklin">Franklin:</span> Fine.
 
-**Franklin:** Hey, dog, we'd be doing Simeon a disservice if we didn't test these rides out.
+<span className="franklin">Franklin:</span> Hey, dog, we'd be doing Simeon a disservice if we didn't test these rides out.
 
-**Lamar:** He ain't even gonna know if they good if we don't push them to the brink. You feel me?
+<span className="lamar">Lamar:</span> He ain't even gonna know if they good if we don't push them to the brink. You feel me?
 
-**Lamar:** Up here, through the studio. Let's show these movie people how we do\!
+<span className="lamar">Lamar:</span> Up here, through the studio. Let's show these movie people how we do\!
 
-> **Lamar** smashes the security barrier, and speeds through the studio, with **Franklin** in close pursuit. They speed through, narrowly avoiding people in the process.
+> <span className="lamar">Lamar</span> smashes the security barrier, and speeds through the studio, with <span className="franklin">Franklin</span> in close pursuit. They speed through, narrowly avoiding people in the process.
 
-**Jimmy:** What the fuck?\!
+<span className="jimmy">Jimmmy:</span> What the fuck?\!
 
-**Franklin:** Oh, we flimin' shit here\! Huh?
+<span className="franklin">Franklin:</span> Oh, we flimin' shit here\! Huh?
 
-> **Lamar** smashes the other security barrier, and launches out onto Red Desert Avenue.
-> A Benson blocks the road further ahead, forcing **Franklin** and **Lamar** to drive down an alley.
+> <span className="lamar">Lamar:</span> smashes the other security barrier, and launches out onto Red Desert Avenue.
+> A Benson blocks the road further ahead, forcing <span className="franklin">Franklin</span> and <span className="lamar">Lamar</span> to drive down an alley.
 
-**Lamar:** Eh, eh. Down this alley here.
+<span className="lamar">Lamar:</span> Eh, eh. Down this alley here.
 
-**Franklin:** Fine.
+<span className="franklin">Franklin:</span> Fine.
 
-**Lamar:** Remember this is Yetarian's car.
+<span className="lamar">Lamar:</span> Remember this is Yetarian's car.
 
-**Franklin:** Yeah. Yeah. Yeah.
+<span className="franklin">Franklin:</span> Yeah. Yeah. Yeah.
 
-> **Franklin** and **Lamar** speed through Vespucci onto San Andreas Avenue, narrowly avoiding an oil tanker in the process, before arriving at Prosperity Street.
+> <span className="franklin">Franklin</span> and <span className="lamar">Lamar</span> speed through Vespucci onto San Andreas Avenue, narrowly avoiding an oil tanker in the process, before arriving at Prosperity Street.
 
-**Lamar:** Left here.
+<span className="lamar">Lamar:</span> Left here.
 
-**Franklin:** Alright.
+<span className="franklin">Franklin:</span> Alright.
 
-> **Franklin** jumps over a canal bridge.
+> <span className="franklin">Franklin</span> jumps over a canal bridge.
 
-**Franklin:** Ohhh shit\!
+<span className="franklin">Franklin:</span> Ohhh shit\!
 
-**Lamar:** We hangin' a left.
+<span className="lamar">Lamar:</span> We hangin' a left.
 
-**Franklin:** Yeah, that's cool.
+<span className="franklin">Franklin:</span> Yeah, that's cool.
 
 > They turn onto Palomino Avenue.
 
-**Lamar:** Whoo\! You wanna get whips like this, you gotta stay on yo' gridnind.
+<span className="lamar">Lamar:</span> Whoo\! You wanna get whips like this, you gotta stay on yo' gridnind.
 
-**Franklin:** N\*\*\*a, and do some time over nickels and dimes? I'll stick to repos, dog.
+<span className="franklin">Franklin:</span> N\*\*\*a, and do some time over nickels and dimes? I'll stick to repos, dog.
 
-**Lamar:** Keep up, homie\!
+<span className="lamar">Lamar:</span> Keep up, homie\!
 
-**Franklin:** Whatever, homie.
+<span className="franklin">Franklin:</span> Whatever, homie.
 
-**Lamar:** We goin' right.
+<span className="lamar">Lamar:</span> We goin' right.
 
-**Franklin:** Whatever you say.
+<span className="franklin">Franklin:</span> Whatever you say.
 
 > They turn onto Vespucci Boulevard, narrowly missing a bus.
 
-**Lamar:** Left here. We going through the parking lot.
+<span className="lamar">Lamar:</span> Left here. We going through the parking lot.
 
-**Franklin:** Cool, homie.
+<span className="franklin">Franklin:</span> Cool, homie.
 
 > They enter the parking lot, and narrowly avoid hitting a Burrito reversing.
 
-**Lamar:** You ain't even testin' me.
+<span className="lamar">Lamar:</span> You ain't even testin' me.
 
-**Franklin:** Screw you too, homie.
+<span className="franklin">Franklin:</span> Screw you too, homie.
 
-**Lamar:** Keep bustin', loc\!
+<span className="lamar">Lamar:</span> Keep bustin', loc\!
 
-**Franklin:** Uh huh.
+<span className="franklin">Franklin:</span> Uh huh.
 
-**Franklin:** Please, homie.
+<span className="franklin">Franklin:</span> Please, homie.
 
 > They race underneath the Arcadius Business Center, before emerging at the entrance to the Union Depository.
 
-**Lamar:** We buzzing the Union Depository, motherfucker\!
-**Alternative:** I'ma make a withdrawal, homie.
+<span className="lamar">Lamar:</span> We buzzing the Union Depository, motherfucker\!  
+<span className="alternative">Alternative:</span> I'ma make a withdrawal, homie.  
 
-**Franklin:** That super bank? Motherfucker, you an idiot.
-**Alternative:** You dumb motherfucker. That's the Union Depository.
+<span className="franklin">Franklin:</span> That super bank? Motherfucker, you an idiot.  
+<span className="alternative">Alternative:</span> You dumb motherfucker. That's the Union Depository.  
 
 > They speed through the Union Depository, and emerge at the car park on the other side.
 
-> If **Lamar** wins
+> If <span className="lamar">Lamar:</span> wins
 
-**Lamar:** Finally, bitch\! When you goin' learn how to move something?
+<span className="lamar">Lamar:</span> Finally, bitch\! When you goin' learn how to move something?
 
-**Franklin:** I'll show you how to move something, n\*\*\*a\!
+<span className="franklin">Franklin:</span> I'll show you how to move something, n\*\*\*a\!
 
-> If **Franklin** wins
+> If <span className="franklin">Franklin</span> wins
 
-**Franklin:** What you go and slow up the road for, dog? Move over so the traffic can flow through.
+<span className="franklin">Franklin:</span> What you go and slow up the road for, dog? Move over so the traffic can flow through.
 
-**Lamar:** Whatever, n***a. I'll let something flow through your ass.
+<span className="lamar">Lamar:</span> Whatever, n***a. I'll let something flow through your ass.
 
-**Franklin:** Dog, I ain't too sure that joke works, dog.
+<span className="franklin">Franklin:</span> Dog, I ain't too sure that joke works, dog.
 
-**Lamar:** I'll let something flow through your ass.
+<span className="lamar">Lamar:</span> I'll let something flow through your ass.
 
-> If **Franklin** wins but the car is damaged
+> If <span className="franklin">Franklin</span> wins but the car is damaged
 
-**Lamar:** That bucket don't look like the whip we picked up.
+<span className="lamar">Lamar:</span> That bucket don't look like the whip we picked up.
 
-**Franklin:** Existing damages, motherfucker.
+<span className="franklin">Franklin:</span> Existing damages, motherfucker.
 
-**Lamar:** Yeah, whatever, homie.
+<span className="lamar">Lamar:</span> Yeah, whatever, homie.
 
 > Sirens ring in the distance
 
-**Lamar:** Oh shit, the one time!
+<span className="lamar">Lamar:</span> Oh shit, the one time!
 
-**Franklin:** Be cool, fool, we got the paperwork.
+<span className="franklin">Franklin:</span> Be cool, fool, we got the paperwork.
 
-**Lamar:** Whatever, you explain that shit. I'll see you at the dealership!
+<span className="lamar">Lamar:</span> Whatever, you explain that shit. I'll see you at the dealership!
 
-**Franklin:** Explain that shit my ass!
+<span className="franklin">Franklin:</span> Explain that shit my ass!
 
 **Police Dispatcher:** Attention Downtown units: we have a 5-10 in progress. Suspects fleeing the Union Depository parking lot in sports cars. Vehicles reported stolen.
 
-> **Franklin** will eventually lose the police, and heads to Premium Deluxe Motorsport
+> <span className="franklin">Franklin</span> will eventually lose the police, and heads to Premium Deluxe Motorsport
 
 ### 🏢 Returning to the Dealership
 
-> **Franklin** arrives at Premium Deluxe Motorsport, and gets out of the car. Lamar is standing by watching a conversation between two people.
+> <span className="franklin">Franklin</span> arrives at Premium Deluxe Motorsport, and gets out of the car. <span className="lamar">Lamar</span> is standing by watching a conversation between two people.
 
-**Jimmy:** I don't get you, bro.
+<span className="jimmy">Jimmy:</span> I don't get you, bro.
 
-**Simeon:** You are a racist and I don't like you, and I will not sell you this car, I will not.
+<span className="simeon">Simeon:</span> You are a racist and I don't like you, and I will not sell you this car, I will not.
 
-**Simeon:** You make my skin crawl, you neo-nazi.
+<span className="simeon">Simeon:</span> You make my skin crawl, you neo-nazi.
 
-**Simeon:** Ah, you are all the same.
+<span className="simeon">Simeon:</span> Ah, you are all the same.
 
-**Simeon:** This racist insulted me.
+<span className="simeon">Simeon:</span> This racist insulted me.
 
-**Lamar:** Ay, what's up fool?
+<span className="lamar">Lamar:</span> Ay, what's up fool?
 
-> **Lamar** walks over to the man **Simeon** is confronting.
+> <span className="lamar">Lamar</span> walks over to the man <span className="simeon">Simeon</span> is confronting.
 
-**Lamar:** Who you callin' a n***a?
+<span className="lamar">Lamar:</span> Who you callin' a n***a?
 
-**Jimmy:** No, no. I'm not callin' nobody a n***a.
+<span className="jimmy">Jimmy:</span> No, no. I'm not callin' nobody a n***a.
 
-**Jimmy:** I... I... mean...
+<span className="jimmy">Jimmy:</span> I... I... mean...
 
-**Jimmy:** N-word.
+<span className="jimmy">Jimmy:</span> N-word.
 
-**Jimmy:** I... I...
+<span className="jimmy">Jimmy:</span> I... I...
 
-**Jimmy:** That's not cool. Man, I don't say that.
+<span className="jimmy">Jimmy:</span> That's not cool. Man, I don't say that.
 
-> **Lamar** points his hand at **Simeon.**
+> <span className="lamar">Lamar</span> points his hand at <span className="simeon">Simeon.</span>
 
-**Lamar:** You fuckin' right, and you'd better keep it right, cause' this man right here, he's an international businessman, a multiculturalist.
+<span className="lamar">Lamar:</span> You fuckin' right, and you'd better keep it right, cause' this man right here, he's an international businessman, a multiculturalist.
 
-**Simeon:** That I could have not said better myself.
+<span className="simeon">Simeon:</span> That I could have not said better myself.
 
-**Simeon:** But seriously, maybe he's not a racist, but I don't think he is man enough for a car like this.
+<span className="simeon">Simeon:</span> But seriously, maybe he's not a racist, but I don't think he is man enough for a car like this.
 
-> **Simeon** points to the yellow BeeJay XL.
+> <span className="simeon">Simeon</span> points to the yellow BeeJay XL.
 
-**Jimmy:** W... wait a second.
+<span className="jimmy">Jimmy:</span> W... wait a second.
 
-> **Lamar** places a hand on the man with the baseball cap.
+> <span className="lamar">Lamar</span> places a hand on the man with the baseball cap.
 
-**Lamar:** [laughs] This guy right here? Him? Get him a hybrid. That's a real man's car.
+<span className="lamar">Lamar:</span> [laughs] This guy right here? Him? Get him a hybrid. That's a real man's car.
 
-**Simeon:** [laughs] I think you are right, Lamar. You'll get a tax rebate. I understand, money is a issue, eh.
+<span className="simeon">Simeon</span> [laughs] I think you are right, Lamar. You'll get a tax rebate. I understand, money is a issue, eh.
 
-**Jimmy:** Money isn't an issue.
+<span className="jimmy">Jimmy:</span> Money isn't an issue.
 
-> **Lamar** talks quietly into Franklin's ear.
+> <span className="lamar">Lamar:</span> talks quietly into <span className="franklin">Franklin's</span> ear.
 
-**Lamar:** This is the best part, watch this when he reel him in, he gonna get all this fool's money, watch this.
+<span className="lamar">Lamar:</span> This is the best part, watch this when he reel him in, he gonna get all this fool's money, watch this.
 
-**Franklin:** Look man, I gotta go. Hey, Simeon, I'm out, I'll holla at you homie.
+<span className="franklin">Franklin:</span> Look man, I gotta go. Hey, Simeon, I'm out, I'll holla at you homie.
 
-> **Franklin** walks back to his white Buffalo S.
+> <span className="franklin">Franklin</span> walks back to his white Buffalo S.
 
-**Lamar:** It's the best part man.
+<span className="lamar">Lamar:</span> It's the best part man.
 
-> **Franklin** and **Lamar** leave the dealership, the achievement/trophy "Welcome To Los Santos" unlocks
+> <span className="franklin">Franklin</span> and <span className="lamar">Lamar</span> leave the dealership, the achievement/trophy "Welcome To Los Santos" unlocks
 
-**Simeon:** So, Jimmy, are you sure you are man enough? Take the wheel, show me.
+<span className="simeon">Simeon</span> So, Jimmy, are you sure you are man enough? Take the wheel, show me.
 
-**Jimmy:** Uhh, sure, uhh, okay.
+<span className="jimmy">Jimmy:</span> Uhh, sure, uhh, okay.
 
-> **Franklin** gets in his car
+> <span className="franklin">Franklin</span> gets in his car
 
-**Lamar:** How 'bout we fall through homie?
+<span className="lamar">Lamar:</span> How 'bout we fall through homie?
 
-> **Franklin** and **Lamar** head to Franklin's House
+> <span className="franklin">Franklin</span> and <span className="lamar">Lamar</span> head to <span className="franklin">Franklin's</span> House
 
-**Lamar:** This chump change. How am I gonna knock a bad, grown and sexy bitch, if I don't got a fat pee-zocket?
+<span className="lamar">Lamar:</span> This chump change. How am I gonna knock a bad, grown and sexy bitch, if I don't got a fat pee-zocket?
 
-**Franklin:** Who you trying to impress?
+<span className="franklin">Franklin:</span> Who you trying to impress?
 
-**Lamar:** Your auntie, Denise. With all that ass, n***a, she got ass.
+<span className="lamar">Lamar:</span> Your auntie, Denise. With all that ass, n***a, she got ass.
 
-**Franklin:** She grown, yeah. She grown into a fuckin' idiot.
+<span className="franklin">Franklin:</span> She grown, yeah. She grown into a fuckin' idiot.
 
-**Lamar:** Nah, she's sexy.
+<span className="lamar">Lamar:</span> Nah, she's sexy.
 
-**Franklin:** Sexy? She more like obsessed with sex, n***a.
+<span className="franklin">Franklin:</span> Sexy? She more like obsessed with sex, n***a.
 
-**Lamar:** No, mad for the penis. That's how exactly I like my women.
+<span className="lamar">Lamar:</span> No, mad for the penis. That's how exactly I like my women.
 
 ### 🏠 Home Sweet Home
 
-> They arrive at **Franklin's** house
+> They arrive at <span className="franklin">Franklin's</span> house
 
-**Franklin:** Man, shit, it's good to be home.
+<span className="franklin">Franklin:</span> Man, shit, it's good to be home.
 
-> **Franklin** and **Lamar** walk to the front door of Franklin's house.
+> <span className="franklin">Franklin</span> and <span className="lamar">Lamar</span> walk to the front door of Franklin's house.
 
-**Lamar:** Wassup, can a loc come up in your crib?
+<span className="lamar">Lamar:</span> Wassup, can a loc come up in your crib?
 
-**Franklin:** Man, fuck you. I'll see you at work.
+<span className="franklin">Franklin:</span> Man, fuck you. I'll see you at work.
 
-**Lamar:** Ah, n*\*\*a, don't hate me cause I'm beautiful, n*\*\*a. Maybe if you got rid of that old yee-yee ass haircut you got, you'd get some bitches on your dick. Oh, better yet, maybe Tanisha'll call your dog-ass if she ever stop fucking with that brain surgeon or lawyer she fucking with. N***a...
+<span className="lamar">Lamar:</span> Ah, n*\*\*a, don't hate me cause I'm beautiful, n*\*\*a. Maybe if you got rid of that old yee-yee ass haircut you got, you'd get some bitches on your dick. Oh, better yet, maybe Tanisha'll call your dog-ass if she ever stop fucking with that brain surgeon or lawyer she fucking with. N***a...
 
-> **Lamar** walks off
+> <span className="lamar">Lamar</span> walks off
 
-**Franklin:** What?!
+<span className="franklin">Franklin:</span> What?!
 
-> **Lamar** flips him off as he walks away. **Franklin** turns to his house, and to the door
+> <span className="lamar">Lamar</span> flips him off as he walks away. <span className="franklin">Franklin</span> turns to his house, and to the door
 
-**Franklin:** Hmph. Motherfucker.
+<span className="franklin">Franklin:</span> Hmph. Motherfucker.
 
-> **Franklin** enters his house, his aunt is in the living room
+> <span className="franklin">Franklin</span> enters his house, his aunt is in the living room
 
-**Denise:** Woo, honey.
+<span className="denise">Denise:</span> Woo, honey.
 
-**Denise:** Y'all telling me.
+<span className="denise">Denise:</span> Y'all telling me.
 
-**Denise:** Oh, he here.
+<span className="denise">Denise:</span> Oh, he here.
 
-**Denise:** We living on top of each other, and it ain't right.
+<span className="denise">Denise:</span> We living on top of each other, and it ain't right.
 
-> **Denise** spots **Franklin** enter the living room
+> <span className="denise">Denise</span> spots <span className="franklin">Franklin</span> enter the living room
 
-**Denise:** Shoo, shoo!
+<span className="denise">Denise:</span> Shoo, shoo!
 
-**Denise:** Get on out of here. Okay baby, I'll see you at that thing, you hear?
+<span className="denise">Denise:</span> Get on out of here. Okay baby, I'll see you at that thing, you hear?
 
-> **Denise** ends the phone call.
+> <span className="denise">Denise</span> ends the phone call.
 
-**Denise:** I was on the phone boy, don't be listening!
+<span className="denise">Denise:</span> I was on the phone boy, don't be listening!
 
-**Denise:** Goddamn freeloader!
+<span className="denise">Denise:</span> Goddamn freeloader!
 
-> **Franklin** goes to his bedroom, and the mission ends
+> <span className="franklin">Franklin</span> goes to his bedroom, and the mission ends.
